--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css">
 
-  <title>UTS Responsive Personal Website</title>
+  <title>UAS Event Website</title>
 </head>
 
 <body>
